# mmry

./: .gitignore  CMakeLists.txt  Cargo.toml  HOTKEY_FIX_STATUS.md  HOTKEY_FIX_SUMMARY.md  ICED_MIGRATION.md  Makefile  README.md  VIEW_BASED_FIX_SUMMARY.md  build-static-windows.sh  build-windows.sh  build.sh  cleanup_mmry.sh  complete_main.cpp  config.sh  fix_test_paths.sh  fix_test_paths_proper.sh  gate_test.sh  leakcheck.sh  mmry.sh  prereqs.sh  run-mmry.sh  run.sh  test_encryption.sh  test_encryption_final.sh  test_escape_final.sh  test_filter_functionality.sh  test_filter_navigation.sh  test_filter_quick.sh  test_final.sh  test_help_dialog.sh  test_hotkey.sh  test_hotkey_fix.sh  test_line_count.sh  test_mmry_interactive.sh  test_scrolling_functionality.sh  test_ui_display.sh  test_ui_line_numbers.sh  test_view_fix.sh  test_visibility_toggle.sh  (+3 more)
cpp/: CMakeLists.txt  CMakeLists_simple.txt  add_editor_protection.sh  clipboardmanager.cpp  clipboardmanager.h  complete_main.cpp  console.json  fix_all_tests.sh  main.cpp  run.sh  simple_main.cpp  test_clipboard.sh
cpp/tests/: test_filter_functionality.sh  test_hotkeys.sh  test_navigation.sh  test_theme_system.sh
include/: clipboard_history.h  clipboard_manager.h  config_manager.h  hotkey_manager.h  ui_manager.h
src/: bookmark_tree.cpp  clipboard_history.cpp  clipboard_manager.cpp  config.cpp  config.h  config_manager.cpp  help.cpp  help.h  hotkey_manager.cpp  key_translation.cpp  key_translation.h  main.cpp  main.h  main.rs  ui.h  ui_linux.cpp  ui_manager.cpp  ui_win32.cpp  utils.cpp  utils.h  x11.h
tests/: test_basic_functionality.sh  test_bookmark_management.sh  test_build.sh  test_clipboard_operations.sh  test_error_handling.sh  test_file_operations.sh  test_file_recreation.sh  test_filter_functionality.sh  test_help_dialog.sh  test_hotkeys.sh  test_navigation.sh  test_scrolling.sh  test_theme_system.sh
themes/: 01-midnight-professional.json  02-charcoal-executive.json  03-slate-corporate.json  04-obsidian-office.json  05-carbon-business.json  06-graphite-workspace.json  07-steel-professional.json  08-onyx-enterprise.json  09-titanium-dark.json  10-anthracite-pro.json  11-neon-void.json  12-cyber-matrix.json  13-quantum-space.json  14-digital-horizon.json  15-neural-network.json  16-tech-noir.json  17-hologram-dark.json  18-binary-eclipse.json  19-photon-flux.json  20-plasma-core.json  21-outrun-sunset.json  22-neon-nights.json  23-vapor-wave.json  24-retro-grid.json  25-miami-vice.json  26-synthwave-city.json  27-electric-dreams.json  28-retrowave.json  29-neon-arcade.json  30-sunset-boulevard.json  Corporate_Blue_Dark.json  Monokai_Pro.json  abyss-dark.json  amber-night.json  anthracite-pro.json  arctic-blue.json  autumn-sunset.json  ayu_dark.json  ayu_dark_theme.json  ayu_light.json  (+109 more)
